<resources>
    <string name="app_name">My ApplicationRecipi</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes_fragment">Recipes</string>
    <string name="recipes_favorite">Favorite</string>
    <string name="recipes_joke">Joke</string>
    <string name="meal_type">Meal Type</string>
    <string name="sidedish">sideDish</string>
    <string name="desert">desert</string>
    <string name="maincourse">mainCourse</string>
    <string name="diettype">DietType</string>
    <string name="apply">Apply</string>
</resources>